# service/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/generate": {
+        "/api/v1/generate/adoc": {
             "post": {
                 "description": "Generate a PDF document from template based on the provided variables",
                 "consumes": [
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/routes.GenerateRequest"
+                            "$ref": "#/definitions/generate.GenerateRequest"
                         }
                     }
                 ],
@@ -50,7 +50,53 @@
                 }
             }
         },
-        "/api/v1/health": {
+        "/api/v1/generate/html": {
+            "post": {
+                "description": "Generate a PDF document from template based on the provided variables",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/pdf"
+                ],
+                "tags": [
+                    "PDF Generate"
+                ],
+                "summary": "Generate something",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/generate.GenerateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "PDF file",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/health": {
             "get": {
                 "description": "Check if the service is running",
                 "tags": [
@@ -89,6 +135,28 @@
         }
     },
     "definitions": {
+        "generate.GenerateRequest": {
+            "type": "object",
+            "required": [
+                "template"
+            ],
+            "properties": {
+                "template": {
+                    "type": "string",
+                    "example": "https://example.com/template.adoc"
+                },
+                "variables": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    },
+                    "example": {
+                        "amount": "100.00",
+                        "name": "John Doe"
+                    }
+                }
+            }
+        },
         "routes.BySizeStat": {
             "type": "object",
             "properties": {
@@ -100,21 +168,6 @@
                 },
                 "Size": {
                     "type": "integer"
-                }
-            }
-        },
-        "routes.GenerateRequest": {
-            "type": "object",
-            "required": [
-                "template"
-            ],
-            "properties": {
-                "template": {
-                    "type": "string",
-                    "example": "https://example.com/template.adoc"
-                },
-                "variables": {
-                    "$ref": "#/definitions/routes.TemplateVariables"
                 }
             }
         },
@@ -242,19 +295,6 @@
                 },
                 "version": {
                     "type": "string"
-                }
-            }
-        },
-        "routes.TemplateVariables": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "string",
-                    "example": "100.00"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "John Doe"
                 }
             }
         }
